--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-awesome-swiper": "^3.1.3",
     "vue-lazyload": "^1.2.6",
     "vue-router": "^3.0.1",
+    "vuex": "^3.0.1",
     "weixin-js-sdk": "^1.3.3"
   },
   "devDependencies": {
